# pkkuhn-web

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  playwright.config.ts
.claude/: settings.local.json
.github/workflows/: deploy.yml  playwright.yml
docs/: EPIC-WEB-01_Wire_KuhnStrategy.md  EPIC-WEB-02_Nash_Strategy_Matrix.md  EPIC-WEB-03_CFR_Convergence_Panel.md  EPIC-WEB-04_Play_As_P1.md  demo-evaluation.md
src/: lib.rs
tests/: cfr.spec.ts  game.spec.ts  helpers.ts  mobile.spec.ts  p1-mode.spec.ts  strategy-table.spec.ts  ui.spec.ts
www/: index.html
