[package]
name = "pkkuhn-web"
version = "0.0.39"
authors = ["electronicpanopticon <gaoler@electronicpanopticon.com>"]
edition = "2024"
rust-version = "1.91.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/ImperialBower/pkkuhn-web"
description = "Interactive Kuhn poker trainer powered by pkcore + WebAssembly."

[lib]
crate-type = ["cdylib"]

[dependencies]
pkcore = "0.0.39"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
